--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "types": "cd client && bun tsc"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@iconify/react": "^6.0.2",
     "@tanstack/react-query": "^5.90.11",
     "@uidotdev/usehooks": "^2.4.1",
